--- a/package.json
+++ b/package.json
@@ -52,5 +52,13 @@
     "copyfiles": "^2.4.1",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.3"
-  }
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
 }
